force-app/main/default/objects/Milestone__c/fields/Complete_Percent__c.field-meta.xml
<CustomField>
    <fullName>Complete_Percent__c</fullName>
    <formula>Total_of_Complete_Itens__c  / Total_of_itens__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>