force-app/main/default/objects/Milestone__c/fields/Total_of_Complete_Itens__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Complete_Itens__c</fullName>
    <label>Total of Complete Itens</label>
    <summaryFilterItems>
        <field>To_do__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>To_do__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>