force-app/main/default/objects/Milestone__c/fields/Total_of_itens__c.field-meta.xml
<CustomField>
    <fullName>Total_of_itens__c</fullName>
    <label>Total of itens</label>
    <summaryForeignKey>To_do__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>